unpackaged/main/default/objects/n2de__Distribution_last_assignee__c/n2de__Distribution_last_assignee__c.object-meta.xml
<CustomObject>
    <label>Distribution last assignee</label>
    <nameField>
        <label>Distribution Last Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution last assignees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>