unpackaged/main/default/objects/n2de__Distribution_last_assignee__c/fields/n2de__Assigned_user__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_user__c</fullName>
    <description>Id of the last user this record was assigned to by DE</description>
    <label>Assigned user</label>
    <length>20</length>
    <type>Text</type>
</CustomField>