unpackaged/main/default/objects/n2de__Distribution_last_assignee__c/fields/n2de__Object_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_id__c</fullName>
    <label>Object id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>