unpackaged/main/default/objects/n2de__Distribution_last_assignee__c/fields/n2de__Previous_assignees__c.field-meta.xml
<CustomField>
    <fullName>n2de__Previous_assignees__c</fullName>
    <label>Previous assignees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>